Create 10 dedicated Use Case landing pages with conversion funnels and link them from main use-cases hub.

--- a/use-cases.html
+++ b/use-cases.html
@@ -64,144 +64,160 @@
             <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(400px, 1fr)); gap: 32px;">
 
                 <!-- 1. Awareness & Reach -->
-                <div class="glass-dark use-case-master-card" style="padding: 48px; border-radius: 32px;">
-                    <div class="use-case-icon">📢</div>
-                    <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Awareness & Reach</h2>
-                    <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">Expand
-                        your audience and increase brand visibility</p>
-                    <div class="implementation-box">
-                        <label>Implementation Strategy</label>
-                        <p>Activate "Bridge Influencers"—key nodes who connect previously siloed professional interest
-                            clusters. By identifying creators with high cross-network resonance, NYRA triggers
-                            network-wide visibility with 3x less spend than broad-reach campaigns.</p>
+                <a href="/solutions/awareness-reach.html" style="text-decoration: none;">
+                    <div class="glass-dark use-case-master-card"
+                        style="padding: 48px; border-radius: 32px; height: 100%;">
+                        <div class="use-case-icon">📢</div>
+                        <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Awareness & Reach</h2>
+                        <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">Expand
+                            your audience and increase brand visibility</p>
+                        <div class="implementation-box">
+                            <label>Implementation Strategy</label>
+                            <p>Activate "Bridge Influencers"—key nodes who connect previously siloed professional
+                                interest clusters.</p>
+                        </div>
                     </div>
-                </div>
+                </a>
 
                 <!-- 2. Product Review / Demo -->
-                <div class="glass-dark use-case-master-card" style="padding: 48px; border-radius: 32px;">
-                    <div class="use-case-icon">🛠️</div>
-                    <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Product Review / Demo</h2>
-                    <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">Get your
-                        product reviewed by industry influencers</p>
-                    <div class="implementation-box">
-                        <label>Implementation Strategy</label>
-                        <p>Deploy "Technical Skeptics" or "Critical Voices" for objective validation. NYRA identifies
-                            influencers whose audience values performance metrics over hype, ensuring your product demo
-                            is seen as a technical benchmark rather than a paid ad.</p>
+                <a href="/solutions/product-review.html" style="text-decoration: none;">
+                    <div class="glass-dark use-case-master-card"
+                        style="padding: 48px; border-radius: 32px; height: 100%;">
+                        <div class="use-case-icon">🛠️</div>
+                        <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Product Review / Demo</h2>
+                        <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">Get
+                            your
+                            product reviewed by industry influencers</p>
+                        <div class="implementation-box">
+                            <label>Implementation Strategy</label>
+                            <p>Deploy "Technical Skeptics" or "Critical Voices" for objective validation.</p>
+                        </div>
                     </div>
-                </div>
+                </a>
 
                 <!-- 3. Sales Partnership -->
-                <div class="glass-dark use-case-master-card" style="padding: 48px; border-radius: 32px;">
-                    <div class="use-case-icon">🤝</div>
-                    <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Sales Partnership</h2>
-                    <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">Create
-                        partnerships that drive sales and conversions</p>
-                    <div class="implementation-box">
-                        <label>Implementation Strategy</label>
-                        <p>Integrate "Consul Influencers" directly into your sales cycle. These are trusted advisors to
-                            procurement teams. NYRA maps the "Influence-to-Opportunity" path, allowing you to reward
-                            creators for high-intent introductions that result in actual revenue.</p>
+                <a href="/solutions/sales-partnership.html" style="text-decoration: none;">
+                    <div class="glass-dark use-case-master-card"
+                        style="padding: 48px; border-radius: 32px; height: 100%;">
+                        <div class="use-case-icon">🤝</div>
+                        <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Sales Partnership</h2>
+                        <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">Create
+                            partnerships that drive sales and conversions</p>
+                        <div class="implementation-box">
+                            <label>Implementation Strategy</label>
+                            <p>Integrate "Consul Influencers" directly into your sales cycle.</p>
+                        </div>
                     </div>
-                </div>
+                </a>
 
                 <!-- 4. Thought Leadership -->
-                <div class="glass-dark use-case-master-card" style="padding: 48px; border-radius: 32px;">
-                    <div class="use-case-icon">💡</div>
-                    <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Thought Leadership</h2>
-                    <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">Position
-                        your brand as an industry expert</p>
-                    <div class="implementation-box">
-                        <label>Implementation Strategy</label>
-                        <p>Co-create visionary content with established SMEs. NYRA identifies the "Original Thinkers" in
-                            your space—those whom other influencers cite. By co-authoring narratives with these nodes,
-                            your brand assumes a dominant intellectual position in the market.</p>
+                <a href="/solutions/thought-leadership.html" style="text-decoration: none;">
+                    <div class="glass-dark use-case-master-card"
+                        style="padding: 48px; border-radius: 32px; height: 100%;">
+                        <div class="use-case-icon">💡</div>
+                        <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Thought Leadership</h2>
+                        <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">
+                            Position
+                            your brand as an industry expert</p>
+                        <div class="implementation-box">
+                            <label>Implementation Strategy</label>
+                            <p>Co-create visionary content with established SMEs and "Original Thinkers."</p>
+                        </div>
                     </div>
-                </div>
+                </a>
 
                 <!-- 5. Technical Trust & Credibility -->
-                <div class="glass-dark use-case-master-card" style="padding: 48px; border-radius: 32px;">
-                    <div class="use-case-icon">🛡️</div>
-                    <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Technical Trust & Credibility</h2>
-                    <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">Build
-                        trust in your technical capabilities</p>
-                    <div class="implementation-box">
-                        <label>Implementation Strategy</label>
-                        <p>Leverage "Architect-Class" influencers—the voices that engineering directors and CTOs follow.
-                            NYRA validates the technical accuracy of these creators' past content to ensure your brand's
-                            credibility is backed by genuine subject matter expertise.</p>
+                <a href="/solutions/technical-trust.html" style="text-decoration: none;">
+                    <div class="glass-dark use-case-master-card"
+                        style="padding: 48px; border-radius: 32px; height: 100%;">
+                        <div class="use-case-icon">🛡️</div>
+                        <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Technical Trust & Credibility
+                        </h2>
+                        <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">Build
+                            trust in your technical capabilities</p>
+                        <div class="implementation-box">
+                            <label>Implementation Strategy</label>
+                            <p>Leverage "Architect-Class" influencers—the voices that engineering directors follow.</p>
+                        </div>
                     </div>
-                </div>
+                </a>
 
                 <!-- 6. Market Education -->
-                <div class="glass-dark use-case-master-card" style="padding: 48px; border-radius: 32px;">
-                    <div class="use-case-icon">📚</div>
-                    <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Market Education</h2>
-                    <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">Educate
-                        your audience about your industry or solution</p>
-                    <div class="implementation-box">
-                        <label>Implementation Strategy</label>
-                        <p>Activate "Teacher Personas"—creators noted for their high "Save-to-Follower" ratios. Using
-                            NYRA's sentiment analysis, we identify experts who excel at simplifying complex categories,
-                            turning long-form education into high-retention social assets.</p>
+                <a href="/solutions/market-education.html" style="text-decoration: none;">
+                    <div class="glass-dark use-case-master-card"
+                        style="padding: 48px; border-radius: 32px; height: 100%;">
+                        <div class="use-case-icon">📚</div>
+                        <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Market Education</h2>
+                        <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">
+                            Educate
+                            your audience about your industry or solution</p>
+                        <div class="implementation-box">
+                            <label>Implementation Strategy</label>
+                            <p>Activate "Teacher Personas"—creators noted for their high educational value.</p>
+                        </div>
                     </div>
-                </div>
+                </a>
 
                 <!-- 7. Whitepaper Collaboration -->
-                <div class="glass-dark use-case-master-card" style="padding: 48px; border-radius: 32px;">
-                    <div class="use-case-icon">📄</div>
-                    <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Whitepaper Collaboration</h2>
-                    <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">Create
-                        authoritative content with industry experts</p>
-                    <div class="implementation-box">
-                        <label>Implementation Strategy</label>
-                        <p>Partner with recognized industry analysts for research-driven lead generation. NYRA maps the
-                            "Citation Network" to find experts whose opinions are frequently referenced in trade
-                            journals, ensuring your whitepaper carries institutional weight.</p>
+                <a href="/solutions/whitepaper-collab.html" style="text-decoration: none;">
+                    <div class="glass-dark use-case-master-card"
+                        style="padding: 48px; border-radius: 32px; height: 100%;">
+                        <div class="use-case-icon">📄</div>
+                        <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Whitepaper Collaboration</h2>
+                        <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">Create
+                            authoritative content with industry experts</p>
+                        <div class="implementation-box">
+                            <label>Implementation Strategy</label>
+                            <p>Partner with recognized analysts mapped via "Citation Network" analysis.</p>
+                        </div>
                     </div>
-                </div>
+                </a>
 
                 <!-- 8. Reputation & Trust Building -->
-                <div class="glass-dark use-case-master-card" style="padding: 48px; border-radius: 32px;">
-                    <div class="use-case-icon">💎</div>
-                    <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Reputation & Trust Building</h2>
-                    <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">Enhance
-                        your brand's reputation in the market</p>
-                    <div class="implementation-box">
-                        <label>Implementation Strategy</label>
-                        <p>Establish a "Protector" network of advocates. NYRA identifies influencers with high "Loyalty
-                            Scores" who naturally align with your brand's mission. These figures act as organic
-                            defenders during industry volatility or competitive shifts.</p>
+                <a href="/solutions/reputation-trust.html" style="text-decoration: none;">
+                    <div class="glass-dark use-case-master-card"
+                        style="padding: 48px; border-radius: 32px; height: 100%;">
+                        <div class="use-case-icon">💎</div>
+                        <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Reputation & Trust Building</h2>
+                        <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">
+                            Enhance
+                            your brand's reputation in the market</p>
+                        <div class="implementation-box">
+                            <label>Implementation Strategy</label>
+                            <p>Establish a "Protector" network of advocates with high loyalty scores.</p>
+                        </div>
                     </div>
-                </div>
+                </a>
 
                 <!-- 9. Brand Affinity -->
-                <div class="glass-dark use-case-master-card" style="padding: 48px; border-radius: 32px;">
-                    <div class="use-case-icon">❤️</div>
-                    <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Brand Affinity</h2>
-                    <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">Create
-                        emotional connections with your audience</p>
-                    <div class="implementation-box">
-                        <label>Implementation Strategy</label>
-                        <p>Find creator partners based on "Cultural DNA" matching. NYRA's LLM layer analyzes the
-                            thematic history of influencers to find those whose personal worldviews perfectly mirror
-                            your brand values, fostering deep emotional resonance.</p>
+                <a href="/solutions/brand-affinity.html" style="text-decoration: none;">
+                    <div class="glass-dark use-case-master-card"
+                        style="padding: 48px; border-radius: 32px; height: 100%;">
+                        <div class="use-case-icon">❤️</div>
+                        <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Brand Affinity</h2>
+                        <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">Create
+                            emotional connections with your audience</p>
+                        <div class="implementation-box">
+                            <label>Implementation Strategy</label>
+                            <p>Find creator partners based on "Cultural DNA" and thematic matching.</p>
+                        </div>
                     </div>
-                </div>
+                </a>
 
                 <!-- 10. Event Amplification -->
-                <div class="glass-dark use-case-master-card" style="padding: 48px; border-radius: 32px;">
-                    <div class="use-case-icon">🎟️</div>
-                    <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Event Amplification</h2>
-                    <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">Boost
-                        visibility and attendance for your events</p>
-                    <div class="implementation-box">
-                        <label>Implementation Strategy</label>
-                        <p>Activate "Digital Co-hosts" for live and hybrid events. NYRA identifies the specific
-                            authority nodes who are attending your event, empowering you to activate them as digital
-                            amplifiers who dominate the social share-of-voice during the show.</p>
+                <a href="/solutions/event-amplification.html" style="text-decoration: none;">
+                    <div class="glass-dark use-case-master-card"
+                        style="padding: 48px; border-radius: 32px; height: 100%;">
+                        <div class="use-case-icon">🎟️</div>
+                        <h2 style="font-size: 24px; color: #fff; margin: 20px 0 10px;">Event Amplification</h2>
+                        <p style="color: var(--primary); font-weight: 500; font-size: 14px; margin-bottom: 20px;">Boost
+                            visibility and attendance for your events</p>
+                        <div class="implementation-box">
+                            <label>Implementation Strategy</label>
+                            <p>Activate "Digital Co-hosts" identified from attendee lists.</p>
+                        </div>
                     </div>
-                </div>
+                </a>
 
             </div>
         </section>
