Implement Use Cases Mega Menu in main navigation across all pages (10 activation pillars). Restore simple footer links. Update mobile menu logic.

--- a/solutions/brand-affinity.html
+++ b/solutions/brand-affinity.html
@@ -23,7 +23,113 @@
                 <span class="logo-tagline">Influence Intelligence</span>
             </a>
             <nav class="nav-links">
-                <a href="/use-cases.html">Use Cases</a>
+                                <div class="nav-item-dropdown">
+                    <a href="/use-cases.html" class="nav-link-with-dropdown mobile-dropdown-btn">Use Cases <span class="dropdown-arrow">▼</span></a>
+                    <div class="mega-menu">
+                        <div class="mega-menu-banner">
+                            🎯 <span>Explore the 10 Pillars of Authority Activation.</span>
+                        </div>
+                        <div class="mega-menu-container use-cases-layout">
+                             <div class="mega-menu-grid-content">
+                                <div class="grid-header">
+                                    <h4>Activation Scenarios</h4>
+                                </div>
+                                <div class="grid-items">
+                                    <a href="/solutions/awareness-reach.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">📢</div>
+                                            <div class="grid-item-text">
+                                                <h5>Awareness & Reach</h5>
+                                                <p>Bridge silos & expand visibility.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/product-review.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🛠️</div>
+                                            <div class="grid-item-text">
+                                                <h5>Product Review</h5>
+                                                <p>Technical validation from skeptics.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/sales-partnership.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🤝</div>
+                                            <div class="grid-item-text">
+                                                <h5>Sales Partnership</h5>
+                                                <p>Activate Consul Influencers.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/thought-leadership.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">💡</div>
+                                            <div class="grid-item-text">
+                                                <h5>Thought Leadership</h5>
+                                                <p>Define the category narrative.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/technical-trust.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🛡️</div>
+                                            <div class="grid-item-text">
+                                                <h5>Technical Trust</h5>
+                                                <p>Win over engineering teams.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/market-education.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">📚</div>
+                                            <div class="grid-item-text">
+                                                <h5>Market Education</h5>
+                                                <p>Simplify complex concepts.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/whitepaper-collab.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">📄</div>
+                                            <div class="grid-item-text">
+                                                <h5>Whitepaper Collab</h5>
+                                                <p>Research with analysts.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/reputation-trust.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">💎</div>
+                                            <div class="grid-item-text">
+                                                <h5>Reputation Defense</h5>
+                                                <p>Build a protector network.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/brand-affinity.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">❤️</div>
+                                            <div class="grid-item-text">
+                                                <h5>Brand Affinity</h5>
+                                                <p>Match Cultural DNA.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/event-amplification.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🎟️</div>
+                                            <div class="grid-item-text">
+                                                <h5>Event Amplification</h5>
+                                                <p>Dominate share of voice.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                             </div>
+                        </div>
+                    </div>
+                </div>
                 <a href="/api.html">API</a>
                 <a href="/insights.html">Insights</a>
                 <a href="javascript:void(0)" class="btn btn-primary btn-nav open-waitlist mobile-only-cta">Join
