Fix navigation inconsistency: Deploy unified Gold Standard Mega Menu header (Solutions + Use Cases) to all pages.

--- a/post.html
+++ b/post.html
@@ -282,13 +282,14 @@
 </head>
 
 <body>
-    <header class="navbar">
+        <header class="navbar">
         <div class="container">
             <a href="/index.html" class="logo" style="text-decoration: none;">
                 <span class="logo-text">NYRA</span>
                 <span class="logo-tagline">Influence Intelligence</span>
             </a>
             <nav class="nav-links">
+                <!-- Solutions Mega Menu -->
                 <div class="nav-item-dropdown">
                     <button class="nav-link-with-dropdown mobile-dropdown-btn" aria-expanded="false">Solutions <span
                             class="dropdown-arrow">▼</span></button>
@@ -356,10 +357,10 @@
                             </div>
                         </div>
                         <div class="mega-menu-footer">
-                            <a href="/index.html" class="footer-action">
+                            <a href="javascript:void(0)" class="footer-action open-waitlist">
                                 <i>📅</i> Book your demo
                             </a>
-                            <a href="/index.html" class="footer-action">
+                            <a href="javascript:void(0)" class="footer-action open-waitlist">
                                 <i>⚡</i> Start your free trial
                             </a>
                             <a href="/api.html" class="footer-action">
@@ -368,8 +369,10 @@
                         </div>
                     </div>
                 </div>
-                                <div class="nav-item-dropdown">
-                    <a href="/use-cases.html" class="nav-link-with-dropdown mobile-dropdown-btn">Use Cases <span class="dropdown-arrow">▼</span></a>
+
+                <!-- Use Cases Mega Menu -->
+                <div class="nav-item-dropdown">
+                    <button class="nav-link-with-dropdown mobile-dropdown-btn" aria-expanded="false">Use Cases <span class="dropdown-arrow">▼</span></button>
                     <div class="mega-menu">
                         <div class="mega-menu-banner">
                             🎯 <span>Explore the 10 Pillars of Authority Activation.</span>
@@ -475,13 +478,18 @@
                         </div>
                     </div>
                 </div>
-                <a href="/#faq">FAQ</a>
+
+                <a href="/api.html">API</a>
+                <a href="/insights.html">Insights</a>
                 <a href="/contact.html">Contact</a>
+                <a href="javascript:void(0)" class="btn btn-primary btn-nav open-waitlist mobile-only-cta">Join
+                    Waitlist</a>
             </nav>
             <div class="nav-right">
                 <a href="https://nyra-webservice-dev-kxi49.ondigitalocean.app/login" target="_blank"
-                    rel="noopener noreferrer" class="nav-link-login">Login</a>
-                <a href="/index.html" class="btn btn-primary btn-nav desktop-only-cta">Join Waitlist</a>
+                    class="nav-link-login">Login</a>
+                <a href="javascript:void(0)" class="btn btn-primary btn-nav open-waitlist desktop-only-cta">Join
+                    Waitlist</a>
                 <button class="mobile-menu-btn" aria-label="Toggle Navigation Menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
