--- a/index.html
+++ b/index.html
@@ -28,19 +28,20 @@
 </head>
 
 <body>
-    <header class="navbar">
+        <header class="navbar">
         <div class="container">
-            <a href="#home" class="logo" style="text-decoration: none;">
+            <a href="/index.html" class="logo" style="text-decoration: none;">
                 <span class="logo-text">NYRA</span>
                 <span class="logo-tagline">Influence Intelligence</span>
             </a>
             <nav class="nav-links">
+                <!-- Solutions Mega Menu -->
                 <div class="nav-item-dropdown">
                     <button class="nav-link-with-dropdown mobile-dropdown-btn" aria-expanded="false">Solutions <span
                             class="dropdown-arrow">▼</span></button>
                     <div class="mega-menu">
                         <div class="mega-menu-banner">
-                            ✨ New: <span>Authority Graph™ 2.0 is now live.</span> <a href="#news"
+                            ✨ New: <span>Authority Graph™ 2.0 is now live.</span> <a href="/index.html#news"
                                 style="color: var(--primary); margin-left: 8px;">Explore the engine &rarr;</a>
                         </div>
                         <div class="mega-menu-container">
@@ -114,15 +115,125 @@
                         </div>
                     </div>
                 </div>
-                <a href="use-cases.html">Use Cases</a>
-                <a href="#faq">FAQ</a>
-                <a href="contact.html">Contact</a>
+
+                <!-- Use Cases Mega Menu -->
+                <div class="nav-item-dropdown">
+                    <button class="nav-link-with-dropdown mobile-dropdown-btn" aria-expanded="false">Use Cases <span class="dropdown-arrow">▼</span></button>
+                    <div class="mega-menu">
+                        <div class="mega-menu-banner">
+                            🎯 <span>Explore the 10 Pillars of Authority Activation.</span>
+                        </div>
+                        <div class="mega-menu-container use-cases-layout">
+                             <div class="mega-menu-grid-content">
+                                <div class="grid-header">
+                                    <h4>Activation Scenarios</h4>
+                                </div>
+                                <div class="grid-items">
+                                    <a href="/solutions/awareness-reach.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">📢</div>
+                                            <div class="grid-item-text">
+                                                <h5>Awareness & Reach</h5>
+                                                <p>Bridge silos & expand visibility.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/product-review.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🛠️</div>
+                                            <div class="grid-item-text">
+                                                <h5>Product Review</h5>
+                                                <p>Technical validation from skeptics.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/sales-partnership.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🤝</div>
+                                            <div class="grid-item-text">
+                                                <h5>Sales Partnership</h5>
+                                                <p>Activate Consul Influencers.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/thought-leadership.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">💡</div>
+                                            <div class="grid-item-text">
+                                                <h5>Thought Leadership</h5>
+                                                <p>Define the category narrative.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/technical-trust.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🛡️</div>
+                                            <div class="grid-item-text">
+                                                <h5>Technical Trust</h5>
+                                                <p>Win over engineering teams.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/market-education.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">📚</div>
+                                            <div class="grid-item-text">
+                                                <h5>Market Education</h5>
+                                                <p>Simplify complex concepts.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/whitepaper-collab.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">📄</div>
+                                            <div class="grid-item-text">
+                                                <h5>Whitepaper Collab</h5>
+                                                <p>Research with analysts.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/reputation-trust.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">💎</div>
+                                            <div class="grid-item-text">
+                                                <h5>Reputation Defense</h5>
+                                                <p>Build a protector network.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/brand-affinity.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">❤️</div>
+                                            <div class="grid-item-text">
+                                                <h5>Brand Affinity</h5>
+                                                <p>Match Cultural DNA.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/event-amplification.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🎟️</div>
+                                            <div class="grid-item-text">
+                                                <h5>Event Amplification</h5>
+                                                <p>Dominate share of voice.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                             </div>
+                        </div>
+                    </div>
+                </div>
+
+                <a href="/api.html">API</a>
+                <a href="/insights.html">Insights</a>
+                <a href="/contact.html">Contact</a>
                 <a href="javascript:void(0)" class="btn btn-primary btn-nav open-waitlist mobile-only-cta">Join
                     Waitlist</a>
             </nav>
             <div class="nav-right">
                 <a href="https://nyra-webservice-dev-kxi49.ondigitalocean.app/login" target="_blank"
-                    rel="noopener noreferrer" class="nav-link-login">Login</a>
+                    class="nav-link-login">Login</a>
                 <a href="javascript:void(0)" class="btn btn-primary btn-nav open-waitlist desktop-only-cta">Join
                     Waitlist</a>
                 <button class="mobile-menu-btn" aria-label="Toggle Navigation Menu">
