--- a/use-cases.html
+++ b/use-cases.html
@@ -20,16 +20,206 @@
 </head>
 
 <body class="use-cases-page">
-    <header class="navbar">
+        <header class="navbar">
         <div class="container">
             <a href="/index.html" class="logo" style="text-decoration: none;">
                 <span class="logo-text">NYRA</span>
                 <span class="logo-tagline">Influence Intelligence</span>
             </a>
             <nav class="nav-links">
-                <a href="/use-cases.html" class="active">Use Cases</a>
+                <!-- Solutions Mega Menu -->
+                <div class="nav-item-dropdown">
+                    <button class="nav-link-with-dropdown mobile-dropdown-btn" aria-expanded="false">Solutions <span
+                            class="dropdown-arrow">▼</span></button>
+                    <div class="mega-menu">
+                        <div class="mega-menu-banner">
+                            ✨ New: <span>Authority Graph™ 2.0 is now live.</span> <a href="/index.html#news"
+                                style="color: var(--primary); margin-left: 8px;">Explore the engine &rarr;</a>
+                        </div>
+                        <div class="mega-menu-container">
+                            <aside class="mega-menu-sidebar">
+                                <div class="sidebar-category">Solutions</div>
+                                <div class="sidebar-item active">Intel Engine <i>&rarr;</i></div>
+                                <div class="sidebar-item">API & Dev <i>&rarr;</i></div>
+                                <div class="sidebar-item">Insights <i>&rarr;</i></div>
+                                <div class="sidebar-item">Partnerships <i>&rarr;</i></div>
+                            </aside>
+
+                            <div class="mega-menu-grid-content">
+                                <div class="grid-header">
+                                    <h4>Capabilities</h4>
+                                </div>
+                                <div class="grid-items">
+                                    <div class="grid-item">
+                                        <div class="grid-item-icon">🔍</div>
+                                        <div class="grid-item-text">
+                                            <h5>Expert Discovery</h5>
+                                            <p>Find authority figures by intent, not just follower counts.</p>
+                                        </div>
+                                    </div>
+                                    <div class="grid-item">
+                                        <div class="grid-item-icon">📈</div>
+                                        <div class="grid-item-text">
+                                            <h5>Velocity Forecasting</h5>
+                                            <p>Predict how fast your message will travel through specific interest
+                                                clusters.</p>
+                                        </div>
+                                    </div>
+                                    <div class="grid-item">
+                                        <div class="grid-item-icon">🛡️</div>
+                                        <div class="grid-item-text">
+                                            <h5>Intelligence Guard</h5>
+                                            <p>Eliminate overpayment with objective market-value audits for every
+                                                activation.</p>
+                                        </div>
+                                    </div>
+                                    <div class="grid-item">
+                                        <div class="grid-item-icon">🕸️</div>
+                                        <div class="grid-item-text">
+                                            <h5>Influence Mapping</h5>
+                                            <p>Visualize the "Bridge Influencers" connecting your fragmented niche
+                                                networks.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <button class="mega-menu-explore-btn">Explore All Capabilities</button>
+                            </div>
+
+                            <div class="mega-menu-featured">
+                                <div class="featured-card">
+                                    <div class="featured-image">🚀</div>
+                                    <h6>NYRA Alpha Program</h6>
+                                    <p>Join the elite circle of authority analysts and early adopters.</p>
+                                    <a href="/careers.html" class="learn-more-link">Learn more &rarr;</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mega-menu-footer">
+                            <a href="javascript:void(0)" class="footer-action open-waitlist">
+                                <i>📅</i> Book your demo
+                            </a>
+                            <a href="javascript:void(0)" class="footer-action open-waitlist">
+                                <i>⚡</i> Start your free trial
+                            </a>
+                            <a href="/api.html" class="footer-action">
+                                <i>📖</i> Take a product tour
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Use Cases Mega Menu -->
+                <div class="nav-item-dropdown">
+                    <button class="nav-link-with-dropdown mobile-dropdown-btn" aria-expanded="false">Use Cases <span class="dropdown-arrow">▼</span></button>
+                    <div class="mega-menu">
+                        <div class="mega-menu-banner">
+                            🎯 <span>Explore the 10 Pillars of Authority Activation.</span>
+                        </div>
+                        <div class="mega-menu-container use-cases-layout">
+                             <div class="mega-menu-grid-content">
+                                <div class="grid-header">
+                                    <h4>Activation Scenarios</h4>
+                                </div>
+                                <div class="grid-items">
+                                    <a href="/solutions/awareness-reach.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">📢</div>
+                                            <div class="grid-item-text">
+                                                <h5>Awareness & Reach</h5>
+                                                <p>Bridge silos & expand visibility.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/product-review.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🛠️</div>
+                                            <div class="grid-item-text">
+                                                <h5>Product Review</h5>
+                                                <p>Technical validation from skeptics.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/sales-partnership.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🤝</div>
+                                            <div class="grid-item-text">
+                                                <h5>Sales Partnership</h5>
+                                                <p>Activate Consul Influencers.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/thought-leadership.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">💡</div>
+                                            <div class="grid-item-text">
+                                                <h5>Thought Leadership</h5>
+                                                <p>Define the category narrative.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/technical-trust.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🛡️</div>
+                                            <div class="grid-item-text">
+                                                <h5>Technical Trust</h5>
+                                                <p>Win over engineering teams.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/market-education.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">📚</div>
+                                            <div class="grid-item-text">
+                                                <h5>Market Education</h5>
+                                                <p>Simplify complex concepts.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/whitepaper-collab.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">📄</div>
+                                            <div class="grid-item-text">
+                                                <h5>Whitepaper Collab</h5>
+                                                <p>Research with analysts.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/reputation-trust.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">💎</div>
+                                            <div class="grid-item-text">
+                                                <h5>Reputation Defense</h5>
+                                                <p>Build a protector network.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/brand-affinity.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">❤️</div>
+                                            <div class="grid-item-text">
+                                                <h5>Brand Affinity</h5>
+                                                <p>Match Cultural DNA.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                    <a href="/solutions/event-amplification.html" class="grid-item-link">
+                                        <div class="grid-item">
+                                            <div class="grid-item-icon">🎟️</div>
+                                            <div class="grid-item-text">
+                                                <h5>Event Amplification</h5>
+                                                <p>Dominate share of voice.</p>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                             </div>
+                        </div>
+                    </div>
+                </div>
+
                 <a href="/api.html">API</a>
                 <a href="/insights.html">Insights</a>
+                <a href="/contact.html">Contact</a>
                 <a href="javascript:void(0)" class="btn btn-primary btn-nav open-waitlist mobile-only-cta">Join
                     Waitlist</a>
             </nav>
