--- a/solutions/market-education.html
+++ b/solutions/market-education.html
@@ -16,8 +16,21 @@
 </head>
 
 <body class="solution-page">
-            <header class="navbar">
-        <div class="container">
+                <header class="navbar">
+        <!-- Utility Bar -->
+        <div class="utility-bar">
+            <div class="container">
+                <a href="/contact.html" class="utility-link">Customer Support</a>
+                <a href="/contact.html" class="utility-link">Contact Sales</a>
+                <div class="utility-search-wrapper">
+                    <span class="utility-search-icon">🔍</span>
+                    <input type="text" placeholder="Search..." class="utility-search-input">
+                </div>
+            </div>
+        </div>
+        
+        <!-- Main Nav -->
+        <div class="container main-nav-container">
             <a href="/index.html" class="logo" style="text-decoration: none;">
                 <span class="logo-text">NYRA</span>
                 <span class="logo-tagline">Influence Intelligence</span>
